assets/css/main.sass
---
---
@import "variables"

@import "bourbon/bourbon"
@import "base/base"
@import "neat/neat"

@import "navigation"
@import "profile"
@import "posts"

.left
  float: left
.right
  float: right

html
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
  background-color: #fdfdfd
  h1,h2,h3,h4,h5,h6
    color: $pink
    &.subheader
      font-weight: normal
  body
    @media screen and (min-width: 40em)
      margin-left: 0
      margin-right: 0
  a
    &.selected
      font-weight: bold
    color: $gray
    &:hover
      color: $pink

  .box
    &.double
      @include span-columns(6 of 9)
      margin-right: 0
    a
      color: $pink
    display: flex
    flex-direction: column
    @include outer-container
    @include span-columns(3 of 9)
    margin-bottom: 1rem
    h1
      margin-bottom: 1rem
    border: solid 1px $light-gray
    padding: 1rem

    @media screen and (max-width: 40em)
      @include span-columns(12)
      h1
        text-align: center
    .language
      font-weight: lighter
      color: $gray
      font-size: 0.75em

  section.main, article.post
    @include outer-container
    @include span-columns(12)
    @media screen and (min-width: 40em)
      @include span-columns(9)
      @include shift(2)

  footer
    @include outer-container
    @media screen and (min-width: 40em)
      @include span-columns(9)
      @include shift(2)
    p
      margin-bottom: 2rem
      &.small
        display: inline-block
        font-size: 0.75em
      &.light
        font-weight: light
        color: $light-gray

